xpl/xpl_parser.output
   0  $accept : program $end

   1  program : decls
   2          |

   3  decls : decls decl
   4        | decl

   5  decl : var ';'
   6       | func

   7  var : type tIDENTIFIER
   8      | tPUBLIC type tIDENTIFIER
   9      | type tIDENTIFIER '=' expr
  10      | tPUBLIC type tIDENTIFIER '=' expr
  11      | tUSE type tIDENTIFIER

  12  func : type tIDENTIFIER '(' param ')'
  13       | tPUBLIC type tIDENTIFIER '(' param ')'
  14       | tUSE type tIDENTIFIER '(' param ')'
  15       | tPROCEDURE tIDENTIFIER '(' param ')'
  16       | tPUBLIC tPROCEDURE tIDENTIFIER '(' param ')'
  17       | tUSE tPROCEDURE tIDENTIFIER '(' param ')'
  18       | type tIDENTIFIER '(' param ')' block
  19       | type tIDENTIFIER '(' param ')' '=' literal block
  20       | tPROCEDURE tIDENTIFIER '(' param ')' block
  21       | tPUBLIC type tIDENTIFIER '(' param ')' block
  22       | tPUBLIC type tIDENTIFIER '(' param ')' '=' literal block
  23       | tPUBLIC tPROCEDURE tIDENTIFIER '(' param ')' block

  24  vars : vars var ';'
  25       | var ';'

  26  block : '{' vars insts '}'
  27        | '{' insts '}'
  28        | '{' vars '}'
  29        | '{' '}'

  30  insts : insts inst
  31        | inst

  32  inst : expr ';'
  33       | expr tPRINT
  34       | expr tPRINTLN
  35       | tWHILE '(' expr ')' inst
  36       | tIF '(' expr ')' inst
  37       | tIF '(' expr ')' inst elsif
  38       | block
  39       | sweep
  40       | tNEXT
  41       | tSTOP
  42       | tRETURN

  43  sweep : tSWEEP '+' '(' lval ':' expr ':' expr ')' inst
  44        | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' inst
  45        | tSWEEP '-' '(' lval ':' expr ':' expr ')' inst
  46        | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' inst

  47  elsif : tELSIF '(' expr ')' inst elsif
  48        | tELSIF '(' expr ')' inst
  49        | tELSE inst

  50  exprs : expr ',' exprs
  51        | expr

  52  expr : expr '+' expr
  53       | expr '-' expr
  54       | expr '*' expr
  55       | expr '/' expr
  56       | expr '%' expr
  57       | expr '<' expr
  58       | expr '>' expr
  59       | expr tGE expr
  60       | expr tLE expr
  61       | expr tNE expr
  62       | expr tEQ expr
  63       | '+' expr
  64       | '-' expr
  65       | '(' expr ')'
  66       | '[' expr ']'
  67       | lval '?'
  68       | '~' expr
  69       | expr '&' expr
  70       | expr '|' expr
  71       | lval '=' expr
  72       | tNULL
  73       | tREAD
  74       | lval
  75       | literal
  76       | funcall

  77  param : args
  78        |

  79  args : args ',' arg
  80       | arg

  81  arg : type tIDENTIFIER

  82  lval : tIDENTIFIER
  83       | expr '[' expr ']'

  84  type : '[' type ']'
  85       | tTINT
  86       | tTREAL
  87       | tTSTRING

  88  literal : tINTEGER
  89          | tREAL
  90          | strings

  91  strings : strings tSTRING
  92          | tSTRING

  93  funcall : tIDENTIFIER '(' exprs ')'
  94          | tIDENTIFIER '(' ')'

state 0
	$accept : . program $end  (0)
	program : .  (2)

	tPROCEDURE  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	$end  reduce 2

	program  goto 8
	func  goto 9
	decl  goto 10
	var  goto 11
	decls  goto 12
	type  goto 13


state 1
	func : tPROCEDURE . tIDENTIFIER '(' param ')'  (15)
	func : tPROCEDURE . tIDENTIFIER '(' param ')' block  (20)

	tIDENTIFIER  shift 14
	.  error


state 2
	var : tPUBLIC . type tIDENTIFIER  (8)
	var : tPUBLIC . type tIDENTIFIER '=' expr  (10)
	func : tPUBLIC . type tIDENTIFIER '(' param ')'  (13)
	func : tPUBLIC . tPROCEDURE tIDENTIFIER '(' param ')'  (16)
	func : tPUBLIC . type tIDENTIFIER '(' param ')' block  (21)
	func : tPUBLIC . type tIDENTIFIER '(' param ')' '=' literal block  (22)
	func : tPUBLIC . tPROCEDURE tIDENTIFIER '(' param ')' block  (23)

	tPROCEDURE  shift 15
	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	.  error

	type  goto 16


state 3
	var : tUSE . type tIDENTIFIER  (11)
	func : tUSE . type tIDENTIFIER '(' param ')'  (14)
	func : tUSE . tPROCEDURE tIDENTIFIER '(' param ')'  (17)

	tPROCEDURE  shift 17
	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	.  error

	type  goto 18


state 4
	type : tTINT .  (85)

	.  reduce 85


state 5
	type : tTREAL .  (86)

	.  reduce 86


state 6
	type : tTSTRING .  (87)

	.  reduce 87


state 7
	type : '[' . type ']'  (84)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	.  error

	type  goto 19


state 8
	$accept : program . $end  (0)

	$end  accept


state 9
	decl : func .  (6)

	.  reduce 6


state 10
	decls : decl .  (4)

	.  reduce 4


state 11
	decl : var . ';'  (5)

	';'  shift 20
	.  error


state 12
	program : decls .  (1)
	decls : decls . decl  (3)

	tPROCEDURE  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	$end  reduce 1

	func  goto 9
	decl  goto 21
	var  goto 11
	type  goto 13


state 13
	var : type . tIDENTIFIER  (7)
	var : type . tIDENTIFIER '=' expr  (9)
	func : type . tIDENTIFIER '(' param ')'  (12)
	func : type . tIDENTIFIER '(' param ')' block  (18)
	func : type . tIDENTIFIER '(' param ')' '=' literal block  (19)

	tIDENTIFIER  shift 22
	.  error


state 14
	func : tPROCEDURE tIDENTIFIER . '(' param ')'  (15)
	func : tPROCEDURE tIDENTIFIER . '(' param ')' block  (20)

	'('  shift 23
	.  error


state 15
	func : tPUBLIC tPROCEDURE . tIDENTIFIER '(' param ')'  (16)
	func : tPUBLIC tPROCEDURE . tIDENTIFIER '(' param ')' block  (23)

	tIDENTIFIER  shift 24
	.  error


state 16
	var : tPUBLIC type . tIDENTIFIER  (8)
	var : tPUBLIC type . tIDENTIFIER '=' expr  (10)
	func : tPUBLIC type . tIDENTIFIER '(' param ')'  (13)
	func : tPUBLIC type . tIDENTIFIER '(' param ')' block  (21)
	func : tPUBLIC type . tIDENTIFIER '(' param ')' '=' literal block  (22)

	tIDENTIFIER  shift 25
	.  error


state 17
	func : tUSE tPROCEDURE . tIDENTIFIER '(' param ')'  (17)

	tIDENTIFIER  shift 26
	.  error


state 18
	var : tUSE type . tIDENTIFIER  (11)
	func : tUSE type . tIDENTIFIER '(' param ')'  (14)

	tIDENTIFIER  shift 27
	.  error


state 19
	type : '[' type . ']'  (84)

	']'  shift 28
	.  error


state 20
	decl : var ';' .  (5)

	.  reduce 5


state 21
	decls : decls decl .  (3)

	.  reduce 3


state 22
	var : type tIDENTIFIER .  (7)
	var : type tIDENTIFIER . '=' expr  (9)
	func : type tIDENTIFIER . '(' param ')'  (12)
	func : type tIDENTIFIER . '(' param ')' block  (18)
	func : type tIDENTIFIER . '(' param ')' '=' literal block  (19)

	'='  shift 29
	'('  shift 30
	';'  reduce 7


state 23
	func : tPROCEDURE tIDENTIFIER '(' . param ')'  (15)
	func : tPROCEDURE tIDENTIFIER '(' . param ')' block  (20)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 33
	type  goto 34


state 24
	func : tPUBLIC tPROCEDURE tIDENTIFIER . '(' param ')'  (16)
	func : tPUBLIC tPROCEDURE tIDENTIFIER . '(' param ')' block  (23)

	'('  shift 35
	.  error


state 25
	var : tPUBLIC type tIDENTIFIER .  (8)
	var : tPUBLIC type tIDENTIFIER . '=' expr  (10)
	func : tPUBLIC type tIDENTIFIER . '(' param ')'  (13)
	func : tPUBLIC type tIDENTIFIER . '(' param ')' block  (21)
	func : tPUBLIC type tIDENTIFIER . '(' param ')' '=' literal block  (22)

	'='  shift 36
	'('  shift 37
	';'  reduce 8


state 26
	func : tUSE tPROCEDURE tIDENTIFIER . '(' param ')'  (17)

	'('  shift 38
	.  error


state 27
	var : tUSE type tIDENTIFIER .  (11)
	func : tUSE type tIDENTIFIER . '(' param ')'  (14)

	'('  shift 39
	';'  reduce 11


state 28
	type : '[' type ']' .  (84)

	.  reduce 84


state 29
	var : type tIDENTIFIER '=' . expr  (9)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 52
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 30
	func : type tIDENTIFIER '(' . param ')'  (12)
	func : type tIDENTIFIER '(' . param ')' block  (18)
	func : type tIDENTIFIER '(' . param ')' '=' literal block  (19)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 56
	type  goto 34


state 31
	args : arg .  (80)

	.  reduce 80


state 32
	param : args .  (77)
	args : args . ',' arg  (79)

	','  shift 57
	')'  reduce 77


state 33
	func : tPROCEDURE tIDENTIFIER '(' param . ')'  (15)
	func : tPROCEDURE tIDENTIFIER '(' param . ')' block  (20)

	')'  shift 58
	.  error


state 34
	arg : type . tIDENTIFIER  (81)

	tIDENTIFIER  shift 59
	.  error


state 35
	func : tPUBLIC tPROCEDURE tIDENTIFIER '(' . param ')'  (16)
	func : tPUBLIC tPROCEDURE tIDENTIFIER '(' . param ')' block  (23)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 60
	type  goto 34


state 36
	var : tPUBLIC type tIDENTIFIER '=' . expr  (10)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 61
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 37
	func : tPUBLIC type tIDENTIFIER '(' . param ')'  (13)
	func : tPUBLIC type tIDENTIFIER '(' . param ')' block  (21)
	func : tPUBLIC type tIDENTIFIER '(' . param ')' '=' literal block  (22)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 62
	type  goto 34


state 38
	func : tUSE tPROCEDURE tIDENTIFIER '(' . param ')'  (17)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 63
	type  goto 34


state 39
	func : tUSE type tIDENTIFIER '(' . param ')'  (14)
	param : .  (78)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	')'  reduce 78

	arg  goto 31
	args  goto 32
	param  goto 64
	type  goto 34


state 40
	literal : tINTEGER .  (88)

	.  reduce 88


state 41
	lval : tIDENTIFIER .  (82)
	funcall : tIDENTIFIER . '(' exprs ')'  (93)
	funcall : tIDENTIFIER . '(' ')'  (94)

	'('  shift 65
	tPRINTLN  reduce 82
	tPRINT  reduce 82
	'='  reduce 82
	'|'  reduce 82
	'&'  reduce 82
	tEQ  reduce 82
	tNE  reduce 82
	tGE  reduce 82
	tLE  reduce 82
	'>'  reduce 82
	'<'  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	'?'  reduce 82
	'['  reduce 82
	';'  reduce 82
	')'  reduce 82
	':'  reduce 82
	','  reduce 82
	']'  reduce 82


state 42
	strings : tSTRING .  (92)

	.  reduce 92


state 43
	literal : tREAL .  (89)

	.  reduce 89


state 44
	expr : tNULL .  (72)

	.  reduce 72


state 45
	expr : tREAD .  (73)

	.  reduce 73


state 46
	expr : '~' . expr  (68)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 66
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 47
	expr : '+' . expr  (63)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 67
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 48
	expr : '-' . expr  (64)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 68
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 49
	expr : '[' . expr ']'  (66)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 69
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 50
	expr : '(' . expr ')'  (65)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	.  error

	strings  goto 51
	expr  goto 70
	literal  goto 53
	funcall  goto 54
	lval  goto 55


state 51
	literal : strings .  (90)
	strings : strings . tSTRING  (91)

	tSTRING  shift 71
	tPRINTLN  reduce 90
	tPRINT  reduce 90
	'|'  reduce 90
	'&'  reduce 90
	tEQ  reduce 90
	tNE  reduce 90
	tGE  reduce 90
	tLE  reduce 90
	'>'  reduce 90
	'<'  reduce 90
	'+'  reduce 90
	'-'  reduce 90
	'*'  reduce 90
	'/'  reduce 90
	'%'  reduce 90
	'['  reduce 90
	';'  reduce 90
	')'  reduce 90
	'{'  reduce 90
	':'  reduce 90
	','  reduce 90
	']'  reduce 90


state 52
	var : type tIDENTIFIER '=' expr .  (9)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '&' expr  (69)
	expr : expr . '|' expr  (70)
	lval : expr . '[' expr ']'  (83)

	'|'  shift 72
	'&'  shift 73
	tEQ  shift 74
	tNE  shift 75
	tGE  shift 76
	tLE  shift 77
	'>'  shift 78
	'<'  shift 79
	'+'  shift 80
	'-'  shift 81
	'*'  shift 82
	'/'  shift 83
	'%'  shift 84
	'['  shift 85
	';'  reduce 9


state 53
	expr : literal .  (75)

	.  reduce 75


state 54
	expr : funcall .  (76)

	.  reduce 76


state 55
	expr : lval . '?'  (67)
	expr : lval . '=' expr  (71)
	expr : lval .  (74)

	'='  shift 86
	'?'  shift 87
	tPRINTLN  reduce 74
	tPRINT  reduce 74
	'|'  reduce 74
	'&'  reduce 74
	tEQ  reduce 74
	tNE  reduce 74
	tGE  reduce 74
	tLE  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'['  reduce 74
	';'  reduce 74
	')'  reduce 74
	':'  reduce 74
	','  reduce 74
	']'  reduce 74


state 56
	func : type tIDENTIFIER '(' param . ')'  (12)
	func : type tIDENTIFIER '(' param . ')' block  (18)
	func : type tIDENTIFIER '(' param . ')' '=' literal block  (19)

	')'  shift 88
	.  error


state 57
	args : args ',' . arg  (79)

	tTINT  shift 4
	tTREAL  shift 5
	tTSTRING  shift 6
	'['  shift 7
	.  error

	arg  goto 89
	type  goto 34


state 58
	func : tPROCEDURE tIDENTIFIER '(' param ')' .  (15)
	func : tPROCEDURE tIDENTIFIER '(' param ')' . block  (20)

	'{'  shift 90
	$end  reduce 15
	tPROCEDURE  reduce 15
	tPUBLIC  reduce 15
	tUSE  reduce 15
	tTINT  reduce 15
	tTREAL  reduce 15
	tTSTRING  reduce 15
	'['  reduce 15

	block  goto 91


state 59
	arg : type tIDENTIFIER .  (81)

	.  reduce 81


state 60
	func : tPUBLIC tPROCEDURE tIDENTIFIER '(' param . ')'  (16)
	func : tPUBLIC tPROCEDURE tIDENTIFIER '(' param . ')' block  (23)

	')'  shift 92
	.  error


state 61
	var : tPUBLIC type tIDENTIFIER '=' expr .  (10)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '&' expr  (69)
	expr : expr . '|' expr  (70)
	lval : expr . '[' expr ']'  (83)

	'|'  shift 72
	'&'  shift 73
	tEQ  shift 74
	tNE  shift 75
	tGE  shift 76
	tLE  shift 77
	'>'  shift 78
	'<'  shift 79
	'+'  shift 80
	'-'  shift 81
	'*'  shift 82
	'/'  shift 83
	'%'  shift 84
	'['  shift 85
	';'  reduce 10


state 62
	func : tPUBLIC type tIDENTIFIER '(' param . ')'  (13)
	func : tPUBLIC type tIDENTIFIER '(' param . ')' block  (21)
	func : tPUBLIC type tIDENTIFIER '(' param . ')' '=' literal block  (22)

	')'  shift 93
	.  error


state 63
	func : tUSE tPROCEDURE tIDENTIFIER '(' param . ')'  (17)

	')'  shift 94
	.  error


state 64
	func : tUSE type tIDENTIFIER '(' param . ')'  (14)

	')'  shift 95
	.  error


state 65
	funcall : tIDENTIFIER '(' . exprs ')'  (93)
	funcall : tIDENTIFIER '(' . ')'  (94)

	tINTEGER  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tREAL  shift 43
	tNULL  shift 44
	tREAD  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	')'  shift 96
	.  error

	strings  goto 51
	exprs  goto 97
	expr  goto 98
	literal  goto 53
	funcall  goto 54
	lval  goto 55

